# workflow-sphinx

./: .gitignore  README.md
.github/workflows/: build.yaml  selftest.yaml
docs/: conf.py  index.rst
example-manylinux/: Cargo.toml  pyproject.toml
example-manylinux/src/: lib.rs
example-pure-python/: example.py  pyproject.toml
