[project]
name = "example"
authors = [
    { name = "Evalf", email = "info@evalf.com" },
]
description = "example"
version = "1.0.0"
requires-python = ">=3.7"

[project.optional-dependencies]
x = ["tomli"]
y = ["typing-extensions"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
